trying to fix forms on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -403,7 +403,7 @@ img.round {
   line-height: 1;
   margin: 10px auto;
   width: calc(100% - 20px - 4px);
-  height: 30px;
+  height: 50px;
   border-radius: 3px;
   padding: 10px;
   border: 1px solid #ffba49;
