--- a/others/boilerplate/src/assets/style/components/forms.styl
+++ b/others/boilerplate/src/assets/style/components/forms.styl
@@ -15,7 +15,7 @@
 		line-height: 1
 		margin: 10px auto
 		width: calc(100% - 20px - 4px)
-		height: 30px
+		height: 50px
 		border-radius: 3px
 		padding: 10px
 		border 1px solid $amarelo
